--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=studioashwattha-backend
+spring.datasource.url=jdbc:mysql://localhost:3306/architectdb
+spring.datasource.username=saurabh
+spring.datasource.password=1234
+spring.datasource.driver-class-name = com.mysql.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+logging.level.root: INFO
