--- a/deployment/ashwattha-springboot-app.service
+++ b/deployment/ashwattha-springboot-app.service
@@ -3,12 +3,11 @@ Description=Ashwattha Architects Spring Boot Application
 After=network.target
 
 [Service]
-WorkingDirectory=/path/to/your/spring/boot/app
-ExecStart=/usr/bin/java -jar your-app.jar
+WorkingDirectory=/etc/developers
+ExecStart=/usr/bin/java -jar studioashwattha-backend-0.0.1-SNAPSHOT.jar
 Restart=always
 Environment="SPRING_PROFILES_ACTIVE=production"
 Environment="JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64"
-EnvironmentFile=/etc/developers/ashwattha.env
 
 [Install]
 RequiredBy=ashwattha-react-app.service
