--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.driver-class-name = com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 logging.level.root: INFO
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=200MB
