Add saperate Image path for fetching images
- Add saperate Image path for fetching images

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ yarn-error.log*
 backend/HELP.md
 backend/.gitignore
 backend/target/
+backend/src/main/resources/static/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
